--- a/client/vercel.json
+++ b/client/vercel.json
@@ -11,5 +11,10 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
+  ],
+  "rewrites": [
+    { "source": "/(.*)",
+     "destination": "/" 
+    }
   ]
 }
