--- a/client/vercel.json
+++ b/client/vercel.json
@@ -7,8 +7,13 @@
     }
   ],
   "rewrites": [
-    { "source": "/(.*)",
-     "destination": "/" 
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
-  ]
+  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
+  "installCommand": "npm install"
 }
