--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,8 +2,9 @@
   "version": 2,
   "builds": [
     {
-      "src": "dist",
-      "use": "@vercel/static"
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
     }
   ],
   "rewrites": [
@@ -11,6 +12,11 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
+  ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/assets/(.*)", "dest": "/assets/$1" },
+    { "src": "/(.*)","dest": "/index.html" }
   ],
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
