--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - PORT=5000
-      - MONGODB_URI=mongodb+srv://Govind:Govind2003@cluster0.yholsmc.mongodb.net/taskManager?retryWrites=true&w=majority&appName=Cluster0
-      - JWT_SECRET=govind1234
-      - NODE_ENV=development
+      - PORT=${PORT}
+      - MONGODB_URI=${MONGODB_URI}
+      - JWT_SECRET=${JWT_SECRET}
+      - NODE_ENV=${NODE_ENV}
     volumes:
       - ./backend:/app
       - /app/node_modules
@@ -20,9 +20,9 @@ services:
     ports:
       - "5173:5173"
     environment:
-      - VITE_API_URL=http://localhost:5000/api
-      - VITE_BASE_URL=http://localhost:5000
-      - VITE_TOKEN_KEY=task_management_token
+      - VITE_API_URL=${VITE_API_URL}
+      - VITE_BASE_URL=${VITE_BASE_URL}
+      - VITE_TOKEN_KEY=${VITE_TOKEN_KEY}
     volumes:
       - ./client:/app
       - /app/node_modules
